syntax = "proto3";

package game.v1;

import "auth/v1/user.proto";
import "game/v1/campaign.proto";
import "game/v1/participant.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/louisbranch/fracturing.space/api/gen/go/game/v1;gamev1";

// Invite represents a seat-targeted campaign invite.
message Invite {
  string id = 1;
  string campaign_id = 2;
  string participant_id = 3;
  string recipient_user_id = 4;
  InviteStatus status = 5;
  string created_by_participant_id = 6;
  google.protobuf.Timestamp created_at = 7;
  google.protobuf.Timestamp updated_at = 8;
}

enum InviteStatus {
  INVITE_STATUS_UNSPECIFIED = 0;
  PENDING = 1;
  CLAIMED = 2;
  REVOKED = 3;
}

// InviteService provides operations for participant invites.
service InviteService {
  // Create a seat-targeted invite.
  rpc CreateInvite(CreateInviteRequest) returns (CreateInviteResponse);

  // Claim a seat-targeted invite.
  rpc ClaimInvite(ClaimInviteRequest) returns (ClaimInviteResponse);

  // Get an invite by ID.
  rpc GetInvite(GetInviteRequest) returns (GetInviteResponse);

  // List invites for a campaign.
  rpc ListInvites(ListInvitesRequest) returns (ListInvitesResponse);

  // List pending invites for a campaign.
  rpc ListPendingInvites(ListPendingInvitesRequest) returns (ListPendingInvitesResponse);

  // List pending invites for the current user.
  rpc ListPendingInvitesForUser(ListPendingInvitesForUserRequest) returns (ListPendingInvitesForUserResponse);

  // Revoke an invite.
  rpc RevokeInvite(RevokeInviteRequest) returns (RevokeInviteResponse);
}

message CreateInviteRequest {
  // The campaign ID to create the invite for.
  string campaign_id = 1;

  // The participant seat this invite targets.
  string participant_id = 2;

  // Optional recipient user ID for this invite.
  string recipient_user_id = 3;
}

message CreateInviteResponse {
  Invite invite = 1;
}

message ClaimInviteRequest {
  // The campaign ID to claim the invite for.
  string campaign_id = 1;

  // The invite ID to claim.
  string invite_id = 2;

  // A signed join grant from auth.
  string join_grant = 3;
}

message ClaimInviteResponse {
  Invite invite = 1;
  Participant participant = 2;
}

message GetInviteRequest {
  string invite_id = 1;
}

message GetInviteResponse {
  Invite invite = 1;
}

message ListInvitesRequest {
  // The campaign ID to list invites for.
  string campaign_id = 1;

  // Optional user ID to filter invites by recipient.
  string recipient_user_id = 2;

  // Optional status to filter invites.
  InviteStatus status = 3;

  // The maximum number of invites to return.
  // If zero, the server defaults to 10. The server clamps values above 10 to 10.
  int32 page_size = 4;

  // A page token received from a prior ListInvitesResponse.
  string page_token = 5;
}

message ListInvitesResponse {
  repeated Invite invites = 1;
  string next_page_token = 2;
}

message ListPendingInvitesRequest {
  // The campaign ID to list pending invites for.
  string campaign_id = 1;

  // The maximum number of invites to return.
  // If zero, the server defaults to 10. The server clamps values above 10 to 10.
  int32 page_size = 2;

  // A page token received from a prior ListPendingInvitesResponse.
  string page_token = 3;
}

message ListPendingInvitesResponse {
  repeated PendingInvite invites = 1;
  string next_page_token = 2;
}

message ListPendingInvitesForUserRequest {
  // The maximum number of invites to return.
  // If zero, the server defaults to 10. The server clamps values above 10 to 10.
  int32 page_size = 1;

  // A page token received from a prior ListPendingInvitesForUserResponse.
  string page_token = 2;
}

message ListPendingInvitesForUserResponse {
  repeated PendingUserInvite invites = 1;
  string next_page_token = 2;
}

message PendingInvite {
  Invite invite = 1;
  Participant participant = 2;
  auth.v1.User created_by_user = 3;
}

message PendingUserInvite {
  Invite invite = 1;
  Campaign campaign = 2;
  Participant participant = 3;
}

message RevokeInviteRequest {
  string invite_id = 1;
}

message RevokeInviteResponse {
  Invite invite = 1;
}
